<resources>
    <string name="app_name">sms Plus</string>

    <string name="currently_not_set_as_the_default_sms_app">currently not set as the default SMS app</string>
    <string name="contact">Contact</string>
    <string name="_100">100</string>
    <string name="description">Description</string>
    <string name="opt1">BlackList</string>
    <string name="opt2">opt2</string>
    <string name="opt3">opt3</string>
    <string name="opt4">opt4</string>
    <string name="opt5">opt5</string>
    <string name="time">time</string>
    <string name="message">message</string>
    <string name="textview">TextView</string>
    <string name="gggggggggg">gggggggggg</string>
    <string name="enter_a_message">Enter a message...</string>

    <string name="todo">TODO</string>
    <string name="enter_mobile_number">Enter mobile number...</string>
    <string name="dialog_title">Select contacts</string>
    <string name="ok_label">Ok</string>
    <string name="dismiss_label">cancel</string>
    <string name="clear_all_label">clear selection</string>
    <string name="add_to_blacklist">Add to blacklist</string>
    <string name="view_blacklist">view blacklist</string>
    <string name="todo1">todo1</string>

    <string name="enter_a_number1">enter a number</string>
    <string name="message1">   enter    message</string>


</resources>
