<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:orientation="vertical"
        tools:context="com.example.rajashekarreddy.sample1.scheduleSMS">


    <EditText
        android:id="@+id/phnnumber"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_a_number1"
        android:inputType="number" />


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/scheduleBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:onClick="timer"
                android:paddingEnd="3dp"
                android:src="@drawable/schedule" />

            <EditText
                android:id="@+id/msgTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/message1"
                android:inputType="textMultiLine" />

            <ImageView
                android:id="@+id/sendbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo1"
                android:onClick="msgSET"
                android:src="@drawable/sendbtn" />
        </LinearLayout>

</LinearLayout>
